Added the landing page's JS and CSS Files and linked them in the html file (#1)

--- a/public/index.html
+++ b/public/index.html
@@ -1,33 +1,34 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Landing Page</title>
+    <head>
+        <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <link rel = "stylesheet" type = "text/css" href = "landingstyle.css" />
+        <title>Landing Page</title>
 
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 
-  </head>
-  <h1>
+    </head>
+    <h1>
       Welcome to TopNotch Edu's Website!
-  </h1>
-  <body>
-    <p>
+    </h1>
+    <body>
+        <p>
             Our website, A++ Learning, is trying to solve the issue of students not being able to easily find 
             academic help within their given schools or universities. It is also meant to help people who are too 
             shy or scared to reach out to others for help. It will give a wide range of people easier 
             access to finding the right tutor for their specific university classes that cater 
             to their needs.
-    </p>
-    <p>Members:</p>
-    <ul>
-        <li>Noah Allen</li>
-        <li>Sahil Patel</li>
-        <li>Tinghui Song</li>
-        <li>Chris Wu</li>
-        <li>Siyi Zhan</li>
-    </ul>
+        </p>
+        <p>Members:</p>
+        <ul>
+            <li>Noah Allen</li>
+            <li>Sahil Patel</li>
+            <li>Tinghui Song</li>
+            <li>Chris Wu</li>
+            <li>Siyi Zhan</li>
+        </ul>
 
-    
-  </body>
+        <script src="[file_name].js"></script>
+    </body>
 </html>
