Added Google Auth Button and Login

--- a/public/index.html
+++ b/public/index.html
@@ -6,13 +6,19 @@
         <link rel = "stylesheet" type = "text/css" href = "landingstyle.css" />
         <title>Landing Page</title>
 
+        <script src="https://www.gstatic.com/firebasejs/6.3.4/firebase-app.js"></script>
+        <script src="https://www.gstatic.com/firebasejs/6.3.4/firebase-auth.js"></script>
+        <script src="https://www.gstatic.com/firebasejs/6.3.4/firebase-firestore.js"></script>
+        <!--<script src="https://www.gstatic.com/firebasejs/5.10.1/firebase-auth.js"></script>-->
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+        <script src="./landing.js"></script>
+        <script src="./config.js"></script>
 
     </head>
     <h1>
       Welcome to TopNotch Edu's Website!
     </h1>
-    <body>
+    <body onload="initialize()">
         <p>
             Our website, A++ Learning, is trying to solve the issue of students not being able to easily find 
             academic help within their given schools or universities. It is also meant to help people who are too 
@@ -29,6 +35,7 @@
             <li>Siyi Zhan</li>
         </ul>
 
-        <script src="[file_name].js"></script>
+        <button type ="button" id="LoginButton" onclick="login()">Login</button>
+
     </body>
 </html>
