--- a/public/register.html
+++ b/public/register.html
@@ -11,6 +11,9 @@
 
 
     <body>
+        <header>
+            <h1>Successfully Accessed Registration Page</h1>
+        </header>
     
     </body>
 </html>
