--- a/public/index.html
+++ b/public/index.html
@@ -45,9 +45,11 @@
 			<section id="one">
 				<div class="inner">
 					<header>
-						<h2>Magna Etiam Lorem</h2>
+						<h2>About Us</h2>
 					</header>
-					<p>Suspendisse mauris. Fusce accumsan mollis eros. Pellentesque a diam sit amet mi ullamcorper vehicula. Integer adipiscin sem. Nullam quis massa sit amet nibh viverra malesuada. Nunc sem lacus, accumsan quis, faucibus non, congue vel, arcu, erisque hendrerit tellus. Integer sagittis. Vivamus a mauris eget arcu gravida tristique. Nunc iaculis mi in ante.</p>
+					<p>
+						Our product, called “A++ Learning”, will be a local and university-based tutoring system where students can find specialized tutors. We will provide connections between students and local tutors that are willing to work together in order to get the help the student needs. Giving a wide range of people offers easier access to find the right tutor for students’ specific university classes that fits their needs.
+					</p>
 				</div>
 			</section>
 
