Sahil's site mods

--- a/public/index.html
+++ b/public/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE HTML>
 <!--
-	Introspect by TEMPLATED
+	A++ Learning
 	templated.co @templatedco
 	Released for free under the Creative Commons Attribution 3.0 license (templated.co/license)
 -->
 <html>
 	<head>
-		<title>Introspect by TEMPLATED</title>
+		<title>A++ Learning</title>
 		<meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
         <script src="https://www.gstatic.com/firebasejs/6.3.4/firebase-app.js"></script>
@@ -22,7 +22,7 @@
 		<!-- Header -->
 			<header id="header">
 				<div class="inner">
-					<a href="index.html" class="logo">introspect</a>
+					<a href="index.html" class="logo">A++ Learning</a>
 					<nav id="nav">
 						<a href="index.html">Home</a>
 						<a href="profile.html">Profile</a>
@@ -36,8 +36,8 @@
 		<!-- Banner -->
 			<section id="banner">
 				<div class="inner">
-					<h1>Introspect: <span>A free + fully responsive<br />
-					site template by TEMPLATED</span></h1>
+					<h1>A++ Learning: <span>A Personalized Local Tutoring Service For Your University!<br />
+					</span></h1>
 				</div>
 			</section>
 
