updated tutor&student descrption (#11)

--- a/public/index.html
+++ b/public/index.html
@@ -59,23 +59,23 @@
 					<article>
 						<div class="content">
 							<header>
-								<h3>Pellentesque adipis</h3>
+								<h3>Become a Tutor Today!</h3>
 							</header>
 							<div class="image fit">
 								<img src="images/pic01.jpg" alt="" />
 							</div>
-							<p>Cumsan mollis eros. Pellentesque a diam sit amet mi magna ullamcorper vehicula. Integer adipiscin sem. Nullam quis massa sit amet lorem ipsum feugiat tempus.</p>
+							<p>Is there a subject that you're good at? Perfect! Register as a tutor now so you can help others and get paid.</p>
 						</div>
 					</article>
 					<article class="alt">
 						<div class="content">
 							<header>
-								<h3>Morbi interdum mol</h3>
+								<h3>Need a Tutor?</h3>
 							</header>
 							<div class="image fit">
 								<img src="images/pic02.jpg" alt="" />
 							</div>
-							<p>Cumsan mollis eros. Pellentesque a diam sit amet mi magna ullamcorper vehicula. Integer adipiscin sem. Nullam quis massa sit amet lorem ipsum feugiat tempus.</p>
+							<p> Need help with your classes? Register as a student and find a tutor who goes to the same school with you.</p>
 						</div>
 					</article>
 				</div>
