crixues first push

--- a/public/profile.html
+++ b/public/profile.html
@@ -12,6 +12,11 @@
 		<link rel="stylesheet" href="assets/css/main.css" />
 	</head>
 	<body>
+		
+			<p>
+				Welcome to our profile page!
+			</p>
+		
 
 		<!-- Header -->
 			<header id="header">
