Added Team Member Description at bottom of page

--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>A++ Learning</title>
+		<title>Home - A++ Learning</title>
 		<meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
         <script src="https://www.gstatic.com/firebasejs/6.3.4/firebase-app.js"></script>
@@ -88,27 +88,49 @@
 						<div class="content">
 							<span class="icon fa-laptop"></span>
 							<header>
-								<h3>Tempus Feugiat</h3>
+								<h3>Noah Allen</h3>
 							</header>
-							<p>Morbi interdum mollis sapien. Sed ac risus. Phasellus lacinia, magna lorem ullamcorper laoreet, lectus arcu.</p>
+							<p>I am a second year Computer Engineering major. I am passionate about this project because often times I find myself in a class where I could use some help but never really know what to do about it.</p>
 						</div>
 					</article>
 					<article>
 						<div class="content">
 							<span class="icon fa-diamond"></span>
 							<header>
-								<h3>Aliquam Nulla</h3>
+								<h3>Sahil Patel</h3>
 							</header>
-							<p>Ut convallis, sem sit amet interdum consectetuer, odio augue aliquam leo, nec dapibus tortor nibh sed.</p>
+							<p>
+								I’m a 2nd-year Computer Engineering Major. I have always been a very introverted person which made going out and finding my own services mentally strenuous and usually not a first or even second option. I would have loved an easy-to-use platform to allow me to book tutoring appointments from the safety of my space.
+								</p>
 						</div>
 					</article>
 					<article>
 					<div class="content">
 							<span class="icon fa-laptop"></span>
 							<header>
-								<h3>Sed Magna</h3>
+								<h3>Tinghui Song</h3>
 							</header>
-							<p>Suspendisse mauris. Fusce accumsan mollis eros. Pellentesque a diam sit amet mi ullamcorper vehicula.</p>
+							<p>
+								I'm a 2nd year Computer Engineering Major. Personally, I had run into many situations where I forgot to book an appointment and ends up not able to get help. If there’s a tool that offers me more tutoring options, it could be very useful when I need urgent help.
+								</p>
+						</div>
+					</article>
+					<article>
+						<div class="content">
+							<span class="icon fa-diamond"></span>
+							<header>
+								<h3>Hongtao Wu</h3>
+							</header>
+							<p>I’m a 2nd-year Computer Science major.  When I need to solve a problem in a short time, I notice that it’s really hard to get a reply from tutors, or sometimes it just took too long. So I really wish if there has a website runs like a real-time Chegg which you can instantly get the response from the tutor for help. </p>
+						</div>
+					</article>
+					<article>
+						<div class="content">
+							<span class="icon fa-diamond"></span>
+							<header>
+								<h3>Siyi Zhan</h3>
+							</header>
+							<p>I’m a 3-rd year Computer Science Major. I usually do my homework at night, and it’s always hard to find my professor or TAs or any other campus resources to help me, which makes me realize many college students need more convenient tutoring at any time.</p>
 						</div>
 					</article>
 				</div>
