Added Team Member Description at bottom of page (#14)

--- a/public/profile.html
+++ b/public/profile.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Generic - Introspect by TEMPLATED</title>
+		<title>Profile - A++ Learning</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -18,7 +18,7 @@
 		<!-- Header -->
 			<header id="header">
 				<div class="inner">
-					<a href="index.html" class="logo">introspect</a>
+					<a href="index.html" class="logo">A++ Learning</a>
 					<nav id="nav">
 						<a href="index.html">Home</a>
 						<a href="profile.html">Profile</a>
