Added Profile Photos + Changed possibly copyrighted pics

--- a/public/profile.html
+++ b/public/profile.html
@@ -29,10 +29,13 @@
 			<a href="#menu" class="navPanelToggle"><span class="fa fa-bars"></span></a>
 
 		<!-- Main -->
-					
-		<p>
-			Welcome to our profile page!
-		</p>
+		<section id="one">
+			<div class="inner">	
+				<header>
+					Welcome to our profile page!
+				</header>
+			</div>
+		</section>
 
 		<!-- Scripts -->
 			<script src="assets/js/jquery.min.js"></script>
