--- a/public/search.html
+++ b/public/search.html
@@ -27,6 +27,13 @@
 			<a href="#menu" class="navPanelToggle"><span class="fa fa-bars"></span></a>
 
 		<!-- Main -->
+		<section id="one">
+			<div class="inner">
+				<header>
+					Welcome to our Search Page!
+				</header>
+			</div>
+		</section>	
 			
 
 		<!-- Scripts -->
