made login/logout work better

--- a/public/register.html
+++ b/public/register.html
@@ -16,12 +16,7 @@
 		<!-- Header -->
 			<header id="header">
 				<div class="inner">
-					<a href="index.html" class="logo">A++ Learning</a>
-					<nav id="nav">
-						<a href="index.html">Home</a>
-						<a href="profile.html">Profile</a>
-                        <a href="search.html">Search</a>
-					</nav>
+					<a class="logo">A++ Learning</a>
 				</div>
 			</header>
 			<a href="#menu" class="navPanelToggle"><span class="fa fa-bars"></span></a>
