--- a/public/search.html
+++ b/public/search.html
@@ -16,9 +16,9 @@
 		<!-- Header -->
 			<header id="header">
 				<div class="inner">
-					<a href="index.html" class="logo">A++ Learning</a>
+					<a href="index2.html" class="logo">A++ Learning</a>
 					<nav id="nav">
-						<a href="index.html">Home</a>
+						<a href="index2.html">Home</a>
 						<a href="profile.html">Profile</a>
                         <a href="search.html">Search</a>
 					</nav>
