registration page done

--- a/public/profile.html
+++ b/public/profile.html
@@ -22,7 +22,8 @@
 					<nav id="nav">
 						<a href="index2.html">Home</a>
 						<a href="profile.html">Profile</a>
-                        <a href="search.html">Search</a>
+						<a href="search.html">Search</a>
+						<button type="button" onclick="logout()">Logout</button>
 					</nav>
 				</div>
 			</header>
@@ -36,6 +37,8 @@
 				</header>
 			</div>
 		</section>
+
+
 
 		<!-- Scripts -->
 			<script src="assets/js/jquery.min.js"></script>
