Added the ability to upload user's information to firebase when they register (#19)

--- a/public/index.html
+++ b/public/index.html
@@ -33,7 +33,7 @@
 		<!-- Banner -->
 			<section id="banner">
 				<div class="inner">
-					<h1>A++ Learning: <span>A Personalized Local Tutoring Service For Your University!<br />
+					<h1><span>A Personalized Local Tutoring Service For Your University!<br />
 					</span></h1>
 				</div>
 			</section>
