--- a/public/profile.html
+++ b/public/profile.html
@@ -23,6 +23,7 @@
 						<a href="index2.html">Home</a>
 						<a href="profile.html">Profile</a>
                         <a href="search.html">Search</a>
+                        <button type="button" onclick="logout()">Logout</button>
 					</nav>
 				</div>
 			</header>
