Noahallen/fix registration (#23)
* Fixed logout button, registration, and uploading profile information to firebase

* Fixed Registration

--- a/public/index2.html
+++ b/public/index2.html
@@ -17,7 +17,7 @@
         <script src="./config.js"></script>
     </head>
     
-	<body onload="initialize()">
+	<body onload="initialize(); getEmail();">
 
 		<!-- Header -->
 			<header id="header">
