--- a/public/profile.html
+++ b/public/profile.html
@@ -8,10 +8,15 @@
 	<head>
 		<title>Profile - A++ Learning</title>
 		<meta charset="utf-8" />
-		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+        <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+        <script src="https://www.gstatic.com/firebasejs/6.3.4/firebase-app.js"></script>
+        <script src="https://www.gstatic.com/firebasejs/6.3.4/firebase-auth.js"></script>
+        <script src="https://www.gstatic.com/firebasejs/6.3.4/firebase-firestore.js"></script>
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+        <script src="./config.js"></script>
 		<link rel="stylesheet" href="assets/css/main.css" />
 	</head>
-	<body>
+	<body onload="initialize()">
 
 		
 
