--- a/public/profile.html
+++ b/public/profile.html
@@ -16,7 +16,7 @@
         <script src="./config.js"></script>
 		<link rel="stylesheet" href="assets/css/main.css" />
 	</head>
-	<body onload="initialize()">
+	<body onload="initialize(); getEmail();">
 
 		
 
@@ -38,8 +38,8 @@
 		<section id="one">
 			<div class="inner">	
 				<header>
-					Welcome to our profile page!
-				</header>
+                    Welcome to our profile page!
+                </header>
 			</div>
 		</section>
 
@@ -49,7 +49,9 @@
 			<script src="assets/js/jquery.min.js"></script>
 			<script src="assets/js/skel.min.js"></script>
 			<script src="assets/js/util.js"></script>
-			<script src="assets/js/main.js"></script>
+            <script src="assets/js/main.js"></script>
+
+
 
 	</body>
 </html>
