Cleaned up profile (#24)

--- a/public/profile.html
+++ b/public/profile.html
@@ -19,7 +19,7 @@
 		<script src="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js"></script>
 		<script src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 	</head>
-	<body onload="initialize(); getEmail();">
+	<body onload="initialize()">
 
 		
 			<div class="container emp-profile">
@@ -37,12 +37,14 @@
 								<div class="col-md-6">
 									<div class="profile-head">
 												<h5>
-													Crixus Wu
+													<!-- Crixus Wu -->
 												</h5>
 												<!-- <h6>
 													Hansome man
 												</h6> -->
-												<p class="proile-rating">RANKINGS : <span>9.5/10</span></p>
+												<p class="proile-rating">RANKING: 
+                                                    <!-- <span>9.5/10</span> -->
+                                                </p>
 										<ul class="nav nav-tabs" id="myTab" role="tablist">
 											<li class="nav-item">
 												<a class="nav-link active" id="home-tab" data-toggle="tab" href="#home" role="tab" aria-controls="home" aria-selected="true">About</a>
@@ -75,7 +77,9 @@
 															<label>E-mail</label>
 														</div>
 														<div class="col-md-6">
-															<p>danchaoren@gmail.com</p>
+															<p>
+                                                                <!-- danchaoren@gmail.com -->
+                                                            </p>
 														</div>
 													</div>
 													<div class="row">
@@ -83,7 +87,9 @@
 															<label>Name</label>
 														</div>
 														<div class="col-md-6">
-															<p>Crixus Wu</p>
+															<p>
+                                                                <!-- Crixus Wu -->
+                                                            </p>
 														</div>
 													</div>
 
@@ -108,7 +114,7 @@
 															</div>
 															<div class="col-md-6">
 																<select>
-																	<option value="physic">Physic</option>
+																	<option value="physic">Physics</option>
 																	<option value="math">Math</option>
 																	<option value="english">English</option>
 																	<option value="history">History</option>
