--- a/public/search.html
+++ b/public/search.html
@@ -17,7 +17,7 @@
         <script src="./config.js"></script>
 		<link rel="stylesheet" href="assets/css/main.css" />
 	</head>
-	<body onload="initialize(); getEmail();">
+	<body onload="initialize()">
 
 		<!-- Header -->
 			<header id="header">
