--- a/public/index2.html
+++ b/public/index2.html
@@ -17,7 +17,7 @@
         <script src="./config.js"></script>
     </head>
     
-	<body onload="initialize(); getEmail();">
+	<body onload="initialize()">
 
 		<!-- Header -->
 			<header id="header">
