--- a/public/profile.html
+++ b/public/profile.html
@@ -24,7 +24,7 @@
 		
 			<div class="container emp-profile">
 						<form method="post">
-							<div class="row">
+							<!-- <div class="row"> -->
 								<!-- <div class="col-md-4">
 									<div class="profile-img">
 										<img src="https://core.luminousindia.com/luminousweb/Image/171-1717870_stockvader-predicted-cron-for-may-user-profile-icon-png.png" alt=""/>
@@ -34,33 +34,33 @@
 										</div>
 									</div>
 								</div> -->
-								<div class="col-md-6">
+								<!-- <div class="col-md-6">
 									<div class="profile-head">
 												<h5>
 													<!-- Crixus Wu -->
-												</h5>
+												<!-- </h5> -->
 												<!-- <h6>
 													Hansome man
 												</h6> -->
-												<p class="proile-rating">RANKING: 
+												<!-- <p class="proile-rating">RANKING:  -->
                                                     <!-- <span>9.5/10</span> -->
-                                                </p>
-										<ul class="nav nav-tabs" id="myTab" role="tablist">
+                                                <!-- </p> -->
+										<!-- <ul class="nav nav-tabs" id="myTab" role="tablist">
 											<li class="nav-item">
 												<a class="nav-link active" id="home-tab" data-toggle="tab" href="#home" role="tab" aria-controls="home" aria-selected="true">About</a>
 											<!-- </li>
 											<li class="nav-item">
 												<a class="nav-link" id="profile-tab" data-toggle="tab" href="#profile" role="tab" aria-controls="profile" aria-selected="false">Timeline</a>
 											</li> -->
-										</ul>
-									</div>
-								</div>
+										<!--</ul> -->
+									<!-- </div> -->
+								<!--</div> -->
 								<!-- <div class="col-md-2">
 									<input type="submit" class="profile-edit-btn" name="btnAddMore" value="Edit Profile"/>
 								</div> -->
-							</div>
+							<!-- </div> -->
 							<div class="row">
-								<div class="col-md-4">
+								<!-- <div class="col-md-4"> -->
 									<!-- <div class="profile-work">
 										<p>WORK LINK</p>
 										<a href="">Website Link</a><br/>
@@ -68,7 +68,7 @@
 										<a href="">Bootply Profile</a>
 
 									</div> -->
-								</div>
+								<!-- </div> -->
 								<div class="col-md-8">
 									<div class="tab-content profile-tab" id="myTabContent">
 										<div class="tab-pane fade show active" id="home" role="tabpanel" aria-labelledby="home-tab">
