Tinghui song/search bar (#28)
* finished dropdown bar and fixed .gitignore

* Fixing search push

--- a/public/search.html
+++ b/public/search.html
@@ -40,7 +40,20 @@
 					Welcome to our Search Page!
 				</header>
 			</div>
-		</section>	
+		</section>
+		<h2>What class Do You Need Help With? </h2>
+		<hr />
+		Select Subject:
+		<select id = "slctSubj" name = "slctSubj" onchange = "populate(this.id, 'slctCourse')" >
+			<option value = "Math">Math</option>
+			<option value = "Computer Science">Computer Science</option>
+			<option value = "English">English</option>
+			<option value = "Physics">Physics</option>
+		</select>
+			<hr />
+		Select Course:
+		
+		<select id = "slctCourse" name = "slctCourse"></select> 	
 			
 
 		<!-- Scripts -->
