Fixed the tutor class registration (#35)

--- a/public/register.html
+++ b/public/register.html
@@ -17,7 +17,7 @@
         <script src="./config.js"></script>
         <meta name="viewport" content="width=device-width, initial-scale=1">
 	</head>
-	<body onload="initialize(); tutorReg();">
+	<body onload="initialize();">
 
 
 
