Fixed code readability (#38)

--- a/public/search.html
+++ b/public/search.html
@@ -38,7 +38,7 @@
 		<h2>What class Do You Need Help With? </h2>
 		<hr />
 		Subject:
-		<select id = "slctSubj" name = "slctSubj" onchange = "populate(this.id, 'slctCourse')" >
+		<select id = "selectSubj" name = "selectSubj" onchange = "populate(this.id, 'selectCourse')" >
 			<option> Select subject</option>
 			<option value = "Math">Math</option>
 			<option value = "Computer Science">Computer Science</option>
@@ -47,7 +47,7 @@
 		</select>
 		<hr >
 		Course Name:
-		<select id = "slctCourse" name = "slctCourse">
+		<select id = "selectCourse" name = "selectCourse">
 		</select> 
 		<hr >
 		<button type="button">Search for Tutors</button>
