--- a/public/profile.html
+++ b/public/profile.html
@@ -37,30 +37,35 @@
 
 
 		<!-- Main -->
-		<label>Email</label>
-		<br>
-        <div id="emailDiv"></div>
-        <br>
+		<div class="profile-header">
+			<div id="fnameProf"></div>Profile
+		</div>
+		<div class="profile-page">
+			<label>Email</label>
+			<br>
+			<div id="emailDiv"></div>
+			<br>
 
-		<label>Name</label>
-		<br>
-        <div id="fnameDiv"></div>
-        <br>
+			<label>Name</label>
+			<br>
+			<div id="fnameDiv"></div>
+			<br>
 
-		<label>School</label>
-		<br>
-        <div id="schoolDiv"></div>
-        <br>
+			<label>School</label>
+			<br>
+			<div id="schoolDiv"></div>
+			<br>
 
-		<label>Tutor or student?</label>
-		<br>
-        <div id="isTutorDiv"></div>
-        <br>
+			<label>Tutor or student?</label>
+			<br>
+			<div id="isTutorDiv"></div>
+			<br>
 
-		<label>Subject</label>
-		<br>
-        <div id="subjectDiv"></div>
-        <br>
+			<label>Subject</label>
+			<br>
+			<div id="subjectDiv"></div>
+			<br>
+		</div>
 
 
 		
