Noahallen/improve profile looks (#43)
* Improved the look of the profile and added comments throughout the javascript code

* Deleted a debugger

* Made it so you no longer enter your email during registration but we just pull it from the account logged in

--- a/public/register.html
+++ b/public/register.html
@@ -65,7 +65,7 @@
 
                     First Name <input type="text" placeholder="First Name" id="fname">
                     Last Name <input type="text" placeholder="Last Name" id="lname">
-                    Email <input type="email" placeholder="Email" id="email">
+                    <!-- Email <input type="email" placeholder="Email" id="email"> -->
                     School Name <input type="text" placeholder="School" id="school">
                     <input type="radio" name="myRadio" value="1" id="student">   Student
                     <br>
