--- a/public/tutorClasses.html
+++ b/public/tutorClasses.html
@@ -66,18 +66,18 @@
             <div class="form-wrap">
                 <h1>Input Classes</h1>
                         <div class="newspaper">
-                                <input type="checkbox" name=" Math 009A" value="1" id="0" /><label for="Classes">Math 009A</label></span><br/>
-                                <input type="checkbox" name=" Math 009B" value="2" id="1" /><label for="Classes">Math 009B</label></span><br/>
-                                <input type="checkbox" name=" Math 009C" value="3" id="2" /><label for="Classes">Math 009C</label></span><br/>
-                                <input type="checkbox" name=" CS 005" value="4" id="3" /><label for="Classes">CS 005</label></span><br/>
-                                <input type="checkbox" name=" CS 008" value="5" id="4" /><label for="Classes">CS 008</label></span><br/>
-                                <input type="checkbox" name=" CS 010" value="6" id="5" /><label for="Classes">CS 010</label></span><br/>
-                                <input type="checkbox" name=" Engl 1A" value="7" id="6" /><label for="Classes">Engl 1A</label></span><br/>
-                                <input type="checkbox" name=" Engl 1B" value="8" id="7" /><label for="Classes">Engl 1B</label></span><br/>
-                                <input type="checkbox" name=" Engl 1C" value="9" id="8" /><label for="Classes">Engl 1C</label></span><br/>
-                                <input type="checkbox" name=" Phys 040A" value="10" id="9" /><label for="Classes">Phys 040A</label></span><br/>
-                                <input type="checkbox" name=" Phys 040B" value="11" id="10" /><label for="Classes">Phys 040B</label></span><br/>
-                                <input type="checkbox" name=" Phys 040C" value="12" id="11" /><label for="Classes">Phys 040C</label></span><br/>
+                                <input type="checkbox" name="•  Math 009A" value="1" id="0" /><label for="Classes">Math 009A</label></span><br/>
+                                <input type="checkbox" name="•  Math 009B" value="2" id="1" /><label for="Classes">Math 009B</label></span><br/>
+                                <input type="checkbox" name="•  Math 009C" value="3" id="2" /><label for="Classes">Math 009C</label></span><br/>
+                                <input type="checkbox" name="•  CS 005" value="4" id="3" /><label for="Classes">CS 005</label></span><br/>
+                                <input type="checkbox" name="•  CS 008" value="5" id="4" /><label for="Classes">CS 008</label></span><br/>
+                                <input type="checkbox" name="•  CS 010" value="6" id="5" /><label for="Classes">CS 010</label></span><br/>
+                                <input type="checkbox" name="•  Engl 1A" value="7" id="6" /><label for="Classes">Engl 1A</label></span><br/>
+                                <input type="checkbox" name="•  Engl 1B" value="8" id="7" /><label for="Classes">Engl 1B</label></span><br/>
+                                <input type="checkbox" name="•  Engl 1C" value="9" id="8" /><label for="Classes">Engl 1C</label></span><br/>
+                                <input type="checkbox" name="•  Phys 040A" value="10" id="9" /><label for="Classes">Phys 040A</label></span><br/>
+                                <input type="checkbox" name="•  Phys 040B" value="11" id="10" /><label for="Classes">Phys 040B</label></span><br/>
+                                <input type="checkbox" name="•  Phys 040C" value="12" id="11" /><label for="Classes">Phys 040C</label></span><br/>
                                 
                         </div>     
 
