*Still doing* Add function for sent a request to the tutor's firebase when student click the time buttom

--- a/public/profileTutor.html
+++ b/public/profileTutor.html
@@ -55,6 +55,9 @@
             <br>
 		</div>
 
+		<div>
+				<button type="button" onclick="pushTimeToFirebase()">Time1</button>
+		</div>
 
 		
 		<!-- Scripts -->
